# GesturePresenter

./: .gitignore  GesturePresenter.spec  LICENSE  README.md  actions.py  app.py  config.py  devices.py  gestures.py  hand_tracker.py  overlay.py  permissions.py  pyproject.toml  speech.py
.github/workflows/: build-app.yml  deploy-site.yml
assets/: icon.icns
frontend/: app.js  index.html  styles.css
landing/: .dockerignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
landing/deploy/: docker-compose.yml
landing/src/: App.svelte  app.css
landing/src/components/: Downloads.svelte  Footer.svelte  Gestures.svelte  Hero.svelte  Nav.svelte  PlatformIcon.svelte  Steps.svelte
landing/src/lib/: content.js  downloads.svelte.js  os.js
packaging/linux/: AppRun  GesturePresenter.desktop
packaging/windows/: GesturePresenter.iss
presentation/: README.md  index.html
report/: comparison_report.tex
research/: README.md  __init__.py  collect.py  compare.py  dataset.py  explain.py  features.py  protocol.json  train.py
research/models/: logistic.joblib  tree.joblib
