[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-presenter"
version = "0.1.0"
description = "Cross-platform gesture controller for presentations"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.9",
  "pyautogui>=0.9.54",
  "pyperclip>=1.8",
  "pywebview>=5.1",
  "screeninfo>=0.8.1",
  "pyobjc-framework-AVFoundation>=9.0; platform_system == 'Darwin'",
  "pyobjc-framework-ApplicationServices>=9.0; platform_system == 'Darwin'",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.0",
  "numpy>=1.26",
  "sounddevice>=0.4.7",
]
# Linux GUI backend for pywebview. macOS and Windows use the OS's built-in
# WebView, but on Linux pywebview needs GTK (system PyGObject + WebKitGTK, which
# a plain venv or uv-managed Python can't import) or Qt. Qt is fully pip-installable
# inside the environment, so it's the reliable choice for running from source.
gui-qt = ["qtpy>=2.4", "PyQt6>=6.6", "PyQt6-WebEngine>=6.6"]
build = ["pyinstaller>=6.8"]
research = [
  # joblib/pickle artifacts are not supported across scikit-learn versions.
  # Keep the research runtime identical to the version used to train the
  # committed study artifacts and reproduce the reported results.
  "scikit-learn==1.6.1",
  "joblib>=1.3",
]

[project.gui-scripts]
gesture-presenter = "app:main"

[tool.setuptools]
py-modules = ["app", "config", "devices", "permissions", "hand_tracker", "gestures", "actions", "speech"]

[tool.setuptools.data-files]
"gesture_presenter" = ["hand_landmarker.task", "frontend/index.html", "frontend/styles.css", "frontend/app.js"]
